--- a/DataInput.css
+++ b/DataInput.css
@@ -1,6 +1,6 @@
 #allContainer {
     position: relative;
-    width: 95%;
+    width: 93vw;
     height: 90%;
     padding: 20px;
     border-style: inset;
@@ -12,8 +12,10 @@
   position : relative;
   height : 40%;
   width : 30%;
-  z-index : 6;
+  z-index : -1;
   padding-left : 20%;
+    top : -6vh;
+    left : 10%
 }
 .littleDD {
     border-radius : 15px;
@@ -60,6 +62,7 @@
     left : 54%;
     max-height : 270px;
     overflow-y : scroll;
+    z-index: 6;
 }
 #commentBlock{
     position : relative;
@@ -90,14 +93,14 @@ margin : 10px;
 }
 #dateTime {
     position: relative;
-    top: 15px;
-    left: -70%;
+    left : -68%;
     z-index: 3;
     font-size: 18px;
     margin-left: auto;
     padding-left: 10px;
     color: green;
     width: 30%;
+    
 }
 #sendeditButton {
 position : relative;
@@ -167,11 +170,11 @@ font-size:  24px;
 }
 #detail_fs_min {
   position : relative;
-  border-style: outset;
-  /*! top : -50px; */
+  border-style: inset;
+   top : -130px; 
   width : 95%;
   /*! padding : 5px; */
-  height : auto;
+  height : 85%;
   /*! padding : 10px; */
   margin : 1px;
   overflow : auto;
@@ -181,7 +184,7 @@ font-size:  24px;
 
 #pgButtons {
     position: relative;
-
+top : 140px;
 
     
 }
@@ -243,5 +246,95 @@ width : 170%;
 #Heading{
     position : relative;
 }
-        	
-        	
+#reglogo_image{
+    position : relative;
+    width : 20%;
+    left : 30%;
+    top:-60px;
+}        	
+#regheadingText {
+    position : relative;
+    font-size : 200%;
+    margin : 0;
+    left : %;
+    width : 200px;
+    top : -60px;
+    float : right
+    
+}
+.inputClass {
+    padding : 5px;
+    
+}
+#reglogo_image{
+position : relative;
+width : 20%;
+height : 20%;
+}
+#imgDisplay1 {
+    position : absolute;
+   
+   
+    top : 25vh;
+    left : 75%;
+    
+     /*! /*! top : -30vh; */ /*! *//*! *! \/
+    left : 55vh; */ /*! *\/ *\/
+    border-radius: 20px; */
+    
+    
+}
+#imgDisplay1 img{
+position : relative;
+    width : 100px;
+    height  : 100px;
+    
+    border-radius: 20px;
+}
+#pgButtonsAnim {
+    position : relative;
+    top : -23vh;
+    font-size : 20px;    
+}
+#matDiv {
+    position : absolute;
+    border : 3px black solid;
+    top : 50%;
+    left : 30%;
+    width : auto;
+    max-width : 50vw;
+    height : 250px;
+    border-radius : 20px;
+    border-style : outset;
+    background-color :gainsboro;
+    font-size : 120%;
+    overflow: auto;
+    padding : 10px;
+    
+}
+.buttonclass {
+    position : relative;
+    border-radius : 10px;
+    top : 10px;
+    font-size : 120%;
+    cursor : pointer;
+    
+}
+.dialogC {
+     position : absolute;
+    border : 3px black solid;
+    top : 50%;
+    left : 30%;
+    width : auto;
+    max-width : 50vw;
+    height : 250px;
+    border-radius : 20px;
+    border-style : outset;
+    background-color :gainsboro;
+    font-size : 120%;
+    overflow: auto;
+    padding : 10px;
+    
+}
+    
+}
