--- a/DataInput.css
+++ b/DataInput.css
@@ -171,7 +171,7 @@ font-size:  24px;
 #detail_fs_min {
   position : relative;
   border-style: inset;
-   top : -130px; 
+   top : -145px; 
   width : 95%;
   /*! padding : 5px; */
   height : 85%;
@@ -184,7 +184,7 @@ font-size:  24px;
 
 #pgButtons {
     position: relative;
-top : 140px;
+top : -160px;
 
     
 }
@@ -293,7 +293,7 @@ position : relative;
 }
 #pgButtonsAnim {
     position : relative;
-    top : -23vh;
+    top : -153px;
     font-size : 20px;    
 }
 #matDiv {
@@ -311,6 +311,7 @@ position : relative;
     overflow: auto;
     padding : 10px;
     
+    z-index: 10;
 }
 .buttonclass {
     position : relative;
