--- a/DataInput.css
+++ b/DataInput.css
@@ -7,24 +7,20 @@
     border-radius: 22px;
 }
 /*edit file css*/
-
 #logo_image {
   position : relative;
   height : 40%;
   width : 30%;
   z-index : -1;
-  padding-left : 20%;
-    top : -6vh;
-    left : 10%
+  top : -0vh;
+   left : -10%;
 }
 .littleDD {
-    border-radius : 15px;
-    
+    border-radius : 15px;    
 }
 .hiddentext {
   display : none;
 }
-
 .thisareaLabel {
     font-size : 25px;
     border : solid 1px green;
@@ -33,32 +29,27 @@
     width : 280px;
     float : left;
     color : black;
-     cursor : pointer;
+    cursor : pointer;
 }
 #editcommentL {
     padding : 20px;
     border : none;
     width : 400px;
     font-size : 16px;
-    
-   
 }
 #lookupHide {
     display : none;
-    
 }
 #editcommentC{
   position : relative;
   float : left;
-  
 }
-
 #lookupdiv {
     position :absolute;
     display : none;
     border : 1px black solid;
     border-radius : 15px;
-        width : 40%;
+    width : 40%;
     left : 54%;
     max-height : 270px;
     overflow-y : scroll;
@@ -76,20 +67,19 @@
  position : relative;
  font-size : 38px;
  text-align : center;
-   width : 300px;
+ width : 300px;
  left: 70%;
  top: -180px;
 }
 #headinglist {
-position : relative;
-max-width : 55%;
-border : dashed 1px green;
-height : 400px;
-overflow : auto;
-margin : 10px;
+	position : relative;
+	max-width : 55%;
+	border : dashed 1px green;
+	height : 400px;
+	overflow : auto;
+	margin : 10px;
     border-radius : 10px;
     padding : 5px;
-
 }
 #dateTime {
     position: relative;
@@ -99,14 +89,13 @@ margin : 10px;
     margin-left: auto;
     padding-left: 10px;
     color: green;
-    width: 30%;
-    
+    width: 30%;    
 }
 #sendeditButton {
-position : relative;
-float : left;
-width:  auto;
-font-size:  24px;
+	position : relative;
+	float : left;
+	width:  auto;
+	font-size:  24px;
 }
 .buttonclass {
     border : solid 1px green;
@@ -122,7 +111,6 @@ font-size:  24px;
     border-width : 1px;
     padding : 5px; 
 }
-
 #outputBlock {
     position : relative;
     border : dashed 1px green;
@@ -135,7 +123,6 @@ font-size:  24px;
     border-radius:  25px;
     font-size:  20px;
 }
-
 #addimages {
     position : relative;
     display : block;
@@ -152,8 +139,7 @@ font-size:  24px;
     height : 20%;
     width : 90%;
     padding : 10px;
-    font-size : 22px;
-   
+    font-size : 22px;   
 }
 #dataForm {
     display : block;
@@ -173,28 +159,22 @@ font-size:  24px;
   border-style: inset;
    top : -145px; 
   width : 95%;
-  /*! padding : 5px; */
   height : 85%;
-  /*! padding : 10px; */
   margin : 1px;
   overflow : auto;
   overflow-x : hidden;
   white-space : nowrap;
 }
-
 #pgButtons {
     position: relative;
-top : -160px;
-
-    
+	top : -0px;
 }
 #imgDisplay {
 	position : relative;
 	border : 1px black dashed;
-  background-color : rgba(205,135, 12, 0.7);
+  	background-color : rgba(205,135, 12, 0.7);
     padding-top: 3px;
-    top : -180px;
-        		
+    top : -180px;       		
 }
 .thumbpic {
 	position : relative;
@@ -204,8 +184,7 @@ top : -160px;
 #images {
 position : relative;
     top : -190px;
-  display:block;  
-
+  display:block;
 }
 #optionsDsplay {
 	position : relative;
@@ -217,31 +196,24 @@ position : relative;
 	border : 1px black dashed;
 	background-color : rgba(205,135, 12, 0.7);
 	padding : 12px;
-   
 	font-size: 12px;
-	
-  	}
+}
 #tagslist{
 position : absolute;
     top : 38%;
     left : 57%;
     width : 20%;
-    /*! float : left; */
-
 }
 .listitemC {
 width : 170%;
 }      	
-
- #acclevel {
+#acclevel {
      position : relative;
      left : -50px;
-     
  }
 #contrib_ID {
     position : relative;
     left : -50px;
-    
 }
 #Heading{
     position : relative;
@@ -260,11 +232,9 @@ width : 170%;
     width : 200px;
     top : -60px;
     float : right
-    
 }
 .inputClass {
     padding : 5px;
-    
 }
 #reglogo_image{
 position : relative;
@@ -273,22 +243,13 @@ height : 20%;
 }
 #imgDisplay1 {
     position : absolute;
-   
-   
     top : 25vh;
     left : 75%;
-    
-     /*! /*! top : -30vh; */ /*! *//*! *! \/
-    left : 55vh; */ /*! *\/ *\/
-    border-radius: 20px; */
-    
-    
 }
 #imgDisplay1 img{
 position : relative;
     width : 100px;
     height  : 100px;
-    
     border-radius: 20px;
 }
 #pgButtonsAnim {
@@ -310,7 +271,6 @@ position : relative;
     font-size : 120%;
     overflow: auto;
     padding : 10px;
-    
     z-index: 10;
 }
 .buttonclass {
@@ -319,7 +279,6 @@ position : relative;
     top : 10px;
     font-size : 120%;
     cursor : pointer;
-    
 }
 .dialogC {
      position : absolute;
@@ -337,5 +296,134 @@ position : relative;
     padding : 10px;
     
 }
+    
+#shortSrcBlock {
+     position : absolute;
+    border : 1px black solid;
+    top : 35%;
+    left : 61%;
+    
+    
+     margin: 10px;
+}
+#pgDialog {
+    position : absolute;
+    border : 1px black solid;
+    border-radius : 15px;
+    width : 30%;
+    height : auto;
+    background-color : yellow;
+    height : 20%;
+    top : 48%;
+    left  : 61%;
+    
+}
+#pgDialog #pgNum {
+    position : relative;
+    width : 20%;
+    left : 40%;
+    font-size : x-large;
+}
+#pgDialog label {
+    position : relative;
+    left : 30%;
+    clear : right;
+    font-size : xx-large;
+}
+#pgDialog #addButt {
+    position : relative;
+    font-size : x-large;
+    left : 40%;
+    
+}
+#clButton {
+    position : relative;
+    left : -55%;
+    font-size : x-large;
+    
+}
+#SrcBlock {
+    position : absolute;
+    width :  40%;
+    top : 40%;
+    height : 50%;
+    left : 60%;
+    background-color : yellow;
+    overflow : auto;
+    border : 1px black solid;
+    border-radius : 15px;
+    
+}
+#SrcBlock span {
+    position : relative;
+    float : left;
+    clear : both;
+    width : 90%;
+    
+}
+#SrcBlock label {
+    position : relative;
+    font-size : x-large;
+    width : 60%;
+    top : 10px;
+}
+#SrcBlock input {
+    position : relative;
+    float : right;
+    top : -40px;
+  
+}
+#SrcBlock select {
+    position : relative;
+    font-size : x-large;
+    float : right;
+    top : -24px;
+    
+}
+/* Sources style*/
+
+#Ocontainer {
+    position : absolute;
+    left : -8%;
+    top : 45px;
+    width : 30%;
+    margin : 5px;
+    
+}
+#Ocontainer input {
+    position : relative;
+    width : 20%;
+    top : -25px
+}
+
+#Ocontainer select {
+    position : relative;
+    left : 165px;
+    width : 120px;
+    
+    font-size: small;
+}
+#pgOptions {
+    position : relative;
+    left : -78%;
+    
+}
+#pgOptions {
+    position : relative;
+    left : -78%;
+    
+}#pgOptions input {
+    position : relative;
+    width : 110px;
+    font-size : small;
+    
+}
+#dataF {
+    position : relative;
+    left : 23%;
+    width : 75;%
+}
+#dataF fieldset {
+    border : none;
     
 }
