--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -29,7 +29,17 @@ top : 10px;
     height : 25%;
     top : -60px;
 }
-
+#MainallContainer #errorDiv {
+  position : absolute;;
+  border : 1px black solid;
+  border-radius : 15px;
+  padding : 10px;
+  background-color : yellow;
+  top : 60px;
+  left : 30%;
+  font-size : large;
+  z-index : 7;
+}
 #MainallContainer #logo_image {
   height : 60%;
   width : 70%;
@@ -68,7 +78,6 @@ top : 10px;
 
 #MainallContainer #dateTime {
   position: relative;
-  /*! top: 15px; */
   left: -70%;
   z-index:3;
   font-size: 18px;
@@ -91,11 +100,10 @@ top : 10px;
   width: 120%;
 }
 #greetingDiv{
-position : relative;
-font-size : 28px;
-color : blue; 
-  /*! width : 30%; */
-  top : ;
+	position : relative;
+	font-size : 28px;
+	color : blue; 
+	top : ;
 }
 #regholder {
   position : relative;
@@ -103,14 +111,13 @@ color : blue;
 }
 #regpic {
   position : relative;
-width : 60%;  
+  width : 60%;  
   top: -0px;
   padding: 5px;
 }
 #regPic {
   position : relative;
    max-width: 44%; 
-  /*! height : auto; */
   font-size: 16px;
   border-radius: 20px;
   top: 10px;
@@ -154,12 +161,10 @@ width : 60%;
     height:470px;
     text-align: center;
     text-decoration: underline;
-    /*! border: red 1px dashed; */
     padding:2px;
     padding-bottom : 5px;
     padding-left : 5px;
     top : -60px;
-   /*! border-radius : 15px; */
 }
 
 .findOption {
@@ -175,29 +180,23 @@ width : 60%;
     color: darkgreen;
     display: none;
     height: 30px;
-  text-align : center;
-    
+  	text-align : center;    
 }
 
 .findOption:hover .contextHelp {
     display: block;
     position : relative;
     width: 200px;
-    
-   
-
 }
  .findHeading {
    position : relative;
    width : 100px;  
    left : 25%;
    font-size : 200%;
-
 }
 .findOption:hover{
-       cursor: pointer; 
+	cursor: pointer; 
 }
-
 #guestBook {
   position : relative;
   font-size : 180%;
@@ -210,11 +209,9 @@ width : 60%;
   left : 65%;
   text-align : center;
    border-radius : 15px;
-  
-}
+ }
 #registerBlock {
   position: relative;
-  /*  float:left; */
   width : 23%;
   height : 12%;
   top : 10px;
@@ -231,15 +228,12 @@ width : 60%;
 }
 .buttonclass{
      cursor : pointer;
-    
 }
 #logouthead{
     cursor : pointer; 
-    
 }
 #loginhead{
     cursor : pointer; 
-    
 }
 .H2 {
   position : relative;
@@ -256,10 +250,8 @@ width : 60%;
     font-size : 25px;
     padding : 10px;
     z-index : 18;
-    
     cursor: pointer;
 }
-
 .loginshow {
    color : blue;
    width : 250px;
@@ -267,25 +259,15 @@ width : 60%;
    border : 1px dashed orange;
    display : block;
    border-radius : 15px;
-   
 }
-
 .logoutCstart {
   display : none;
-  
 }
 .logoutCshow {
   display : inline;
-  
 }
-
 /*this is searchForm.css*/
 #SFallContainer {
- /* padding : 20px;
-  border-style: inset;
-  border-radius: 22px; 
-  
-  height: 90%;*/
  position : relative;
   width : 90vw;
   height : auto;
@@ -294,24 +276,19 @@ width : 60%;
   border-radius : 15px;
   left : 1%;
 }
-
 #option3btn {
   position : relative;
-  top : -0px;
-  
+  top : 50px;
   max-width: 100%;
   font-size: 80%;
 }
 #option2btn {
   position : relative;
   top : 10px;
-  
   max-width: 70%;
   font-size: 80%;
   width: auto;
 }
-
-
 #SFallContainer #logo_image_holder {
     position: relative;
     left: 70%;
@@ -319,10 +296,8 @@ width : 60%;
   width : 60%;
 }
 .italC {
-  
   font-style: italic;
 }
-
 #SFallContainer #dateTime {
   position: relative;
   top: 15px;
@@ -338,20 +313,17 @@ width : 60%;
   display: none;
 }
 #SFallContainer #logo_image{
-height : 60%;
-  width : 50%;
-  
+	height : 60%;
+  	width : 50%;
 }
-
 #SFallContainer .cathead {
-position : absolute;
-      font-size : 250%;
-      text-decoration : underline;
+	position : absolute;
+   font-size : 250%;
+   text-decoration : underline;
    top : 120px;
-      left : 35%;
-      z-index : 4;
+   left : 35%;
+   z-index : 4;
 }
-
 #SFallContainer .selectList {
   position : relative;
   height : 25%;
@@ -359,13 +331,27 @@ position : absolute;
   margin : 15px;
   font-size : 100%;
   padding : 1px;
-  }
+}
+#DDL1Veg{
+  position : relative;
+}
+#DDL2{
+  position : absolute;
+   left : 20%; 
+}
+#DDL3dd{
+  position : relative;
+  width : 130px;
+}
+#DDLOption{
+  position : absolute;
+  left : 0%;
+}
 #SFallContainer #findOptions {
   position : relative;
   border : 1px black dashed;
   width : 70%;
   padding : 10px;
-  
   height: 30vh;
 }
 #SFallContainer #ddl3Txt {
@@ -375,18 +361,15 @@ position : absolute;
     position : relative;
     border : 1px dashed red;
     width : 75%;
-    
 }
 #findOptions input.buttonclass {
   position : relative;
-  /*! float : right; */
 }
 #SFallContainer #pgButtons {
     position : relative;
     width: 500px;
   margin-bottom : 15px;
 }
-
 .buttonclass {
   position : relative;
    border-radius: 25px; 
@@ -397,23 +380,20 @@ position : absolute;
   padding : 4px;
   margin : 5px;
   left : 0%;
-  
 }
 #SFallContainer #theCategory {
   position : relative;
   padding : 10px;
- width : 20%;
+  width : 20%;
    border-style : dashed;
   border-width : 2px;
   max-height: 260px;
   margin-right: 10px;
   float : right;
    overflow-y : scroll;
-  top: 110px;
-  left: 2%;
+  top: 4px;
+  left: -2%;
 }
-
-
 #SFallContainer #detail_fs{
 position : relative;
   height : 70%;
@@ -421,17 +401,11 @@ position : relative;
   width : 90%;
   top : 5px;
   border-radius : 22px;
-  
 }
-
 #infoSet {
   position : relative;
   width : 500px;
   padding : 12px;
-  /*! top : -38vh; */
-  left : %;
-  
-  
   width: 500px;
   border: 1px black solid;
   height: auto;
@@ -442,19 +416,15 @@ position : relative;
   text-align : left;
   text-decoration: underline;
  font-size : 20px ;
- 
 }
-
 .detailC {
   text-align:  left;
-  
   word-wrap: normal;
   overflow: auto;
 }
 #specipicH {
   position: relative;
   width : 60%;   
-  
   border: 1px black solid;
   width: 40%;
   height: 300px;
@@ -463,23 +433,20 @@ position : relative;
   position : relative;
   top : -0px;
   width : auto;
-  
   float: right;
 }
 #subContain {
   position : relative;
-   width : 85vw;
-    height : auto;
+  width : 85vw;
+  height : auto;
   max-height: 100vh;
   padding : 20px;
   border-style: inset;
   border-radius: 22px; 
-
   left: 1%;
 }
 #SFallContainer #catPicsList {
   position : relative;
- 
   width : 115px;
   height : auto;
   top : 10%;
@@ -487,19 +454,18 @@ position : relative;
 }
 #catPicsList img {
   cursor : pointer;
-  width : 200px;
+  width : 260px;
   height : 200px;
 }
-/*this is details.css
-it describes the detailspage*/
+/*this is details.css*/
 #DETallContainer {
   position : relative;
-  width : 95%;
-  height : 90%;
+  width : 100vw;
+  height : 87vh;
   padding : 20px;
   border-style: inset;
-    border-radius: 22px;
-  top: 1vh;
+  border-radius: 22px;
+  top: 3vh;
 }
 #DETallContainer #dateTime {
   position: relative;
@@ -518,8 +484,6 @@ it describes the detailspage*/
   font-size: 16px;
   border-radius: 12px;
   padding : 5px;
- 
-  
 }
 #DETallContainer #detail_fs {
   position : relative;
@@ -531,22 +495,17 @@ it describes the detailspage*/
   padding-left : 10px;
   margin-left : 10px;
   border-radius: 12px;
-   
   max-height: 650px;
 }
-
 #DETallContainer #logo_image_holder{
   position : relative;
    left : 68%;
   top : -40px;
  }
-
 #DETallContainer #logo_image {
   height : 40%;
   width : 30%;
-
 }
-
 #DETallContainer #fqnNameList{
   position : relative;
   width : 75%;
@@ -558,13 +517,11 @@ it describes the detailspage*/
   border-radius: 12px; 
   overflow: auto;
   margin-top :  10px;
-
 }
 #DETallContainer .labelClass {
  text-align : left;
  text-decoration: underline;
  font-size : 20px ;
-  
 } 
 .itemC {
   position : relative;
@@ -575,7 +532,6 @@ it describes the detailspage*/
   border-radius : 22px;
   padding : 10px;
   max-height : 95px;
-
 }
 #otherDetails {
   position : relative;
@@ -586,15 +542,12 @@ it describes the detailspage*/
   margin-top : 10px;
   overflow : auto;
   max-height : 100px;
-  
 }
 .oDD{
   display : none;
-  
 }
 .hiddentext{
   display : none;
-  
 }
 #DETallContainer #catHeading {
   position : relative;
@@ -605,7 +558,6 @@ it describes the detailspage*/
 .italC {
   font-style : italic;
 }
-
 #oDDOutput {
   position : relative;
   border : 1px black dashed;
@@ -613,22 +565,19 @@ it describes the detailspage*/
   padding : 10px;
   max-height : 120px;
   max-width : 45%;
-
   overflow : auto;
   left : 29%;
   padding-top : 10px;
-  
 }
 .oDHClass {
   cursor: pointer;
-  
 }
 #DETallContainer #imgGrid {
   position : absolute;
   max-width : 340px;
   max-height : 310px;
-float : right;
-top : 10%;
+  float : right;
+  top : 10%;
   left : 78%;
   overflow : auto;
   margin-right : 10px;
@@ -637,52 +586,40 @@ top : 10%;
 #DETallContainer .imgClass {
   width : 150px;
   height : 150px;
-  
   border-radius: 12px;
   margin-left: 3px;
 }
 .longText {
-  
   max-width : 85%;
 }
 #suboD {
   position : relative;
   width : 100%;
   max-height : 150px;
-  
 }
 .OutputAnim {
-
   top : -70px;
-
 }
 .OutputMin {
-
   top : -70px;
-
 }
-
 .OutputVeg {
-
   top : -100px;
-
 }
-
 #DETallContainer #pgButtons {
 position : relative;
-  top : -60px;
-left: 1%;
+  	top : -60px;
+	left: 1%;
 }
+/*this is register.css*/
 
-/*this is register.css
-it describes the registration form*/
 #REGallContainer {
   position : relative;
   width : 95%;
   height : 90%;
   padding : 20px;
   border-style: inset;
-    border-radius: 22px;
+   border-radius: 22px;
 }
 #REGallContainer #dateTime {
   position: relative;
@@ -698,18 +635,15 @@ it describes the registration form*/
 #REGallContainer #logo_image_holder{
   position : relative;
    left : 68%;
-  top : -40px;
+   top : -40px;
  }
 
 #REGallContainer #logo_image {
   height : 40%;
   width : 30%;
-
 }
 #REGallContainer #pgButtons {
-position : relative;
-  
-
+	position : relative;
 }
 .inputClass {
 	position : relative;
@@ -720,52 +654,45 @@ position : relative;
 	margin : 2px;
 	top : -30px;
 	padding : 3px;
-	
-	}
+}
 #personalDetails {
 	 width : 60%;
 	 border: green 1px dashed;
 	padding : 10px;
 }
-
 #imgDisplay{
-position : absolute;
-top : 15px;
-left : 65%;
-width : 30%;
-border: orange 1px dashed;
-padding : 1px;
-text-align : center;
-
+	position : absolute;
+	top : 15px;
+	left : 65%;
+	width : 30%;
+	border: orange 1px dashed;
+	padding : 1px;
+	text-align : center;
 }
 #inputDiv {
-position : relative;
-border: green 2px solid;
-padding : 10px;
-width : 90%;
-left : 2%;
-border-style:ridge;
+	position : relative;
+	border: green 2px solid;
+	padding : 10px;
+	width : 90%;
+	left : 2%;
+	border-style:ridge;
 }
 .thumbpic {
 	border-radius : 12px;
-  width : 120px;
-  height : 120px;
-  
+  	width : 120px;
+  	height : 120px;
 }
 #REGallContainer .labelClass {
 	height : 32px;
 	padding : 3px;
 	font-size : 18px;
-	
 	margin : 1px;
-		  
-	}
+}
 .selectClass {
 	font-size : 15px;
 	height : 42px;
 	border : green solid 1px;
 }
-
 .buttonclass {
   position : relative;
     border : green solid 1px;
@@ -774,13 +701,10 @@ border-style:ridge;
   font-size : 20px;
   padding : 4px;
   margin : 10px;
-  
 }
-
 .fileClass {
     border : 1px dashed green;
 }
-
 #REGallContainer #detail_fs{
   position : relative;
   height : 70%;
@@ -789,27 +713,31 @@ border-style:ridge;
   width : 90%;
   overflow : auto;
   white-space : nowrap;
-  
 }
-
-/*this IBIS_other_functions.css
-it describes the Other functions page */
-
+/*this IBISUtilities.css*/
 .linklist {
     border : 1px dashed blue;
 }
-
 #listsList {
     position :relative;
     width : 40%;
+  
 }
-
+#listsList .linksclass {
+  text-decoration: underline;
+  color : black;
+   cursor : pointer;
+}
+#listsList li {
+  color : black;
+  cursor : pointer;
+  
+}
 #AdminList{
     position : relative;
     width : 40%;
     float : right;
     border-color : green;
-    
 }
 #detail_fs{
     position : relative;
@@ -824,13 +752,11 @@ it describes the Other functions page */
   font-size : 90%;
   padding : 8px;
   margin : 10px;
-  
 }
 .locked {
   background-color : rgba(2, 2, 2, 0.6);
   color : grey;
 }
-
 .adminC {
   background-color : rgba(255, 255, 255, 0.6);
   color : black;
@@ -845,83 +771,72 @@ it describes the Other functions page */
     top: -60px;
     left: 8px;
 }
-
 #ratingsBlock{
-      position: relative;
+    position: relative;
     border: black 1px solid;
     border-radius: 20px;
     width: 16vw;
-  min-width:300px;
+  	min-width:300px;
     height: 100px;
-  top : -225px;
-  left :20%;
-  display :none;
-  overflow: auto;
-  padding: 30px;
-  padding-right : 0px;
-  
+ 	top : -225px;
+  	left :20%;
+  	display :none;
+  	overflow: auto;
+  	padding: 30px;
+  	padding-right : 0px;
 }
-
-  
 #ratehead {
   padding : 20%;
   font-size : 130%;
   text-decoration: underline;
-    
-  
 }
 #ratebut{
-  position : relative;
-  border: black 1px solid;
+  	position : relative;
+  	border: black 1px solid;
     border-radius: 20px;
     width: 16vw;
-  min-width:250px;
+  	min-width:250px;
     height: auto;
-  top : -230px;
-  left :20%;
-  font-size : 190%;
-  text-decoration: underline;
-  background-color: yellow;
+  	top : -230px;
+  	left :20%;
+  	font-size : 190%;
+  	text-decoration: underline;
+ 	 background-color: yellow;
 }
 .button:hover {
   cursor: pointer;
   background-color: blue;
-  
 }
 .button{
   padding-left:20px;
 }
 #commentBlock {
-  position : relative;
-  border : 1px black solid;
-  border-radius : 25px;
-padding : 20px; 
-  width : 40%;
-  background-color: pink;
-  top : -270px;
-  left :38%;
-  display : none;
-  
+  	position : relative;
+  	border : 1px black solid;
+  	border-radius : 25px;
+	padding : 20px; 
+  	width : 40%;
+  	background-color: pink;
+  	top : -270px;
+  	left :38%;
+  	display : none;
 }
 #commentBlock label {
   font-size : 120%;
-  
 }
 #welcBlock {
   position : relative;
-   border : 1px black solid;
+  border : 1px black solid;
   border-radius : 20px;
   width : 24%;
- left : 65%;
+  left : 65%;
   height : auto;
   top : 5%;
   padding : 10px;
-  
   padding-top: 0px;
 }
 #currScore {
   font-size : 300%;
-  
 }
 /*profile section*/
 #informDiv {
@@ -935,15 +850,12 @@ padding : 20px;
 #nameSpan {
   position : relative;
   font-size : 350%;
-    
-  
 }
 #imageSpan img {
   position : relative;
   width : 20%;
   float : right;
   top : -60px;
-  
 }
 #scoreSpan {
   position : relative;
@@ -960,7 +872,8 @@ padding : 20px;
   padding : 10px;
   margin : 10px;
   cursor : pointer;
-  top : -30px;
+  top : 50px;
+  left: 125px;
 } 
 #buttContSpan {
   position : relative;
@@ -978,9 +891,10 @@ padding : 20px;
   padding : 10px;
   margin :10px;
   cursor : pointer;
+ top: 10px;
+ left: 110px;
 }
 #ddl3Txt {
-  
   position: relative;
   height: 20%;
   max-width: 150px;
@@ -997,12 +911,8 @@ padding : 20px;
 .localN{
   position : relative;
   max-width: 60%;
-  
-  /*! border: 1px black solid; */
   display: block;
 }
-/*! profile Section */
-
 #imageSpan img {
   position : relative;
 }
@@ -1011,37 +921,261 @@ padding : 20px;
   float : right;
   width : 300px;
   top : -200px;
-  
 }
 /*lostnFounf*/
-
-* #LostBlock {
+#LostBlock {
   position : relative;
   border : 1px black solid;
   width : 45%;
   height : 60vh;
   padding : 10px;
   margin : 5px
-  
 }
 #FoundBlock {
   position  : relative;
   float : right;
-  width : 50%;
+  width : 51%;
   border : 1px black solid;
-  top : -64vh;
-  
+  top : -63vh;
+  left: -10px;
 }
+#pgButtonslnf {
+  position : relative;
+  width : auto;
+  font-size : x-large;
+  top : -55px;
+  left : 4%;
+}
+#messDiv {
+  position : relative;
+  height : 80%;
+  overflow : auto;
+  top : 30px;
+}
+#messDiv li {
+  font-size : large;
+  cursor : pointer;
+  width : auto;
+  max-width : 90%;
+}
+#messDiv li:hover {
+  color : blue;
+}
+/*end LnF*/
 .headC {
   position : relative;
   font-size : x-large;
   text-decoration: underline;
   left : 40%;
-  
 }
 .selectB {
   position : relative;
   top : 40px;
   clear : right;
+  width: 30%;
+  left: -25px;
+  font-size: large;
+}
+.Gselect {
+  position : relative;
+  float : left;
+  cursor : pointer;
+  color : blue;
+  margin : 3px;
+  font-size : x-large;
+  padding-left: 1.5%;
+}
+#GBlock {
+  position : absolute;
+  width : 80%;
+  padding : 15px;
+  top: 100%;
+  left: 10%;
+}
+#Ghead {
+  position : relative;
+  display : block;
+  left : 30%;
+  font-size : xx-large;
+  text-decoration:  underline;
+}
+#listsList #glList {
+  position : relative;
+  margin-left : -42px;
+  list-style-type: none;
+  cusrsor : pointer;
+  text-decoration: underline;
+}
+#listStuff {
+  position : relative;
+  margin-left : -30px;
+  display : none;
+}
+#retBlock {
+  position : absolute;
+  border : 1px black solid;
+  width : 28%;
+  display : block;
+  top : -35%;
+  z-index : 6;
+  max-height : 20vh;
+  background-color: rgba(52,34,14,80);
+  color : aliceblue;
+  overflow : auto;
+  left: 80%;
+}
+.GitemC {
+  position : relative;
+  text-align: top;
+  clear : right;
+  font-size : x-large;
+  padding-right : 40px;
+  padding : 5px;
+  z-index : 7;
+}
+.GdefC {
+  position : relative;
+  max-width : 130px;
+  display : none;
+}
+.entryP {
+  positon : relative;
+}
+#defBlock {
+  position : absolute;
+  border : 1px black solid;
+  display : block;
+  max-width : 40%;
+  max-height : 80%;
+  top : -80%;
+  left : 30%;
+  background-color: rgba(152,34,14,80);
+  color : aliceblue;
+  font-size : x-large;
+  z-index: 6;
+  padding: 5px;
+  overflow: auto;
+  left : 37%;
+}
+.Gbutton {
+  position : relative;
+  font-size : xx-large;
+  left : 95%;
+  padding-bottom : 1px;
+  color : blue;
+  cursor : pointer;
+  width : 150px;
+  top: -190px;
+}
+/*Sources page styles*/
+
+#SrcallContainer {
+  position : relative;
+  width : 93vw;
+  height : 100%; 
+  padding : 20px;
+  border-style: inset;
+  border-radius : 15px;
+  left : 19px;
+}
+#src_fs_main {
+  position : relative;
+  border-style: outset;
+  top : -50px;
+  width : 95%;
+  padding : 15px;
+  min-height: 120px;
+  border-radius : 25px;
+  left: 2%;
+}
+#SrcallContainer #dateTime {
+  position: relative;
+  left: -70%;
+  z-index:3;
+  font-size: 18px;
+  margin-left:auto;
+  padding-left:10px;
+  color: green;
+  width: 30%;
+}
+
+#SrcallContainer #logo_image_holder{
+    position: relative;
+    left :49% ;
+    margin-left: auto;
+    margin-right: auto;
+    width : 50%;
+    height : 25%;
+    top : -60px;
+}
+
+#SrcallContainer #logo_image {
+  height : 60%;
+  width : 40%;
+  z-index : 6;
+}
+#pgHead {
+  position : relative;
+  top : -60px;
+  left : 40%;
+  font-size : xx-large;
+  text-decoration: underline;
+  
+}
+#src_fs_main span {
+  position : relative;
+  float : left;
+  font-size : medium;
+  width : 20%;
+  margin : 15px;
+}
+#src_fs_main input {
+  position : relative;
+  float : right;
+  
+}
+#src_fs_main label {
+  position: relative;
+  left : 0px;
+ } 
+#src_fs_main select {
+  position: relative;
+  /*! float : right; */
+  width : 45%;
+  height : 20px;
+  
+}
+#src_fs_main select option {
+  position : relative;
+  font-size : x-large;
+  
+}
+#src_fs_main .buttonC {
+  position : relative;
+  float : left;
+  width : 15%;
+  height : 50px;
+  font-size : xx-large;
+  
+}
+#SrcallContainer .linkC {
+  position : relative;
+  font-size : x-large;
+  top : -50px;
+  left : 50px;
+
+}
+#retHeading {
+  position : relative;
+  
+  
+}
+#utilHeading {
+  position : relative;
+  top : -20px;
+  left : 40%;
+  font-size : xx-large;
+  text-decoration : underline;
+  
   
 }
