--- a/imgmatch.css
+++ b/imgmatch.css
@@ -1,4 +1,35 @@
-  #imgDiv {  position: relative;
+#compContainer {
+  position : absolute;
+  width : 95vw;
+  height : 90vh; 
+  padding : 20px;
+  border-style: inset;
+  border-radius : 15px;
+  left : 10px;
+} 
+#Retcontainer #subContainer input {
+	position: relative;
+	top: -160px;
+}
+#buttons label {
+    position: relative;
+    cursor: pointer;
+    font-size: large;
+    text-decoration: underline;
+  margin : 10px;
+}
+
+#compSub {
+  position : relative;
+  border-style: outset;
+  top : 0px;
+  width : 95%;
+  padding : 25px;
+  height : auto;;
+  border-radius : 25px;
+}
+
+#imgDiv {  position: relative;
     padding: 10px;
     width: 270px;
     border-style: dashed;
@@ -7,6 +38,38 @@
     margin-right: 10px;
     float: right;
     overflow-y: scroll;
+}
+#logo_image_holder{
+    position: relative;
+    left :40% ;
+    margin-left: auto;
+    margin-right: auto;
+    width : 50%;
+    height : 25%;
+    top : -60px;
+}
+#logo_image {
+  height : 60%;
+  width : 70%;
+  z-index : 6;
+}
+#picHeading {
+  position : relative;
+  font-size : xx-large;
+  width : 30%;
+  left : 20%;
+  top : -50px;
+  
+}
+#dateTime {
+  position: relative;
+  left: -70%;
+  z-index:3;
+  font-size: 18px;
+  margin-left:auto;
+  padding-left:10px;
+  color: green;
+  width: 30%;
 }
 
 #listDiv {
@@ -22,55 +85,15 @@ position : relative;
 	position : relative;
 	width : 200px;
 	height : 200px;
+  left : 30%;
+  border-radius : 15px;
+  top : -100px;
 }
-.buttonclass {
+#retHeading {
   position : relative;
-  top : 40px;
-  height: auto;
-  width : auto;
-  font-size : xx-large;
-}
-#imageSpan {
-  position absolute;
-  float : right;
-  margin : 15px;  
-}
-
-#imgDiv img {
-  position : relative;
-  width : 100px;
-  height : 100px;
-  
-}
-#imgDiv {
-  position : relative;
-  width : 110px;
-  max-height : 220px;
-  
-}
-#listDiv {
-  position : relative;
-  left : 10px;
-    
-  
-}
-.imgthumb {
-  width : 200px;
-  height : 200px;
-  
-}
-.labelC {
+  top : -100px;
+  left : 30%;
   font-size : x-large;
-  
-  
-}
-.contentC {
-  position : relative;
-  font-size: large;
- }
-#listDiv img {
-  position : relative;
-  width : 250px;
-  float : right;
+  text-decoration : underline;
   
 }
