--- a/vegGloss.css
+++ b/vegGloss.css
@@ -1,20 +1,3 @@
-/*classes
-ac
-buttClass
-glossEntry
-itemC
-labelText
-inputText
-shortText
-longText
-
-id
-dateTime
-dateBlock
-timeBlock
-logo_image_holder
-*/ 
-
 .ac{
  position : relative;
   width : 90vw;
@@ -23,29 +6,44 @@ logo_image_holder
   border-style: inset;
   border-radius : 15px;
   left : 19px;
-top : 10px;
+  top : 10px;
 }
-
+#GlBody #dateTime {
+  position : relative;
+  top : 10px;
+  left : 10px;
+  color : green
+  
+}
 #logo_image{
   position : relative;
-  width : 45%;
-  left : 45%;
+  width : 30%;
+  left : 65%;
+  top : -20%;
 }
-
 #glossEntry .itemC {
   position : relative;
   width : 45%;
   height : auto;
   min-height: 200px;
-  
 }
-
 .glossP{
   position : relative;
   width : 120px;
   height : 120px;
-float : right;
-top : -40px;
+  float : right;
+  top : -40px;
   border : 1px solid aquamarine;
   left: -20px;
+}
+#GlBody #glHeading {
+  position : relative; 
+  left : 40%;
+  font-size : xx-large;
+  
+}
+#GlBody #pgButtons {
+  position : relative;
+  left : 2%;
+  
 }
