--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -4,7 +4,7 @@ It describes the main page*/
 #MainallContainer {
   position : absolute;
   width : 93vw;
-  height : 90vh; 
+  height : 90%; 
   padding : 20px;
   border-style: inset;
   border-radius : 15px;
@@ -22,12 +22,12 @@ top : 10px;
 
 #MainallContainer #logo_image_holder{
     position: relative;
-    left :0% ;
+    left :-0% ;
     margin-left: auto;
     margin-right: auto;
     width : 50%;
-    height : 25%;
-    top : -60px;
+    height : 55%;
+    top : -42px;
 }
 #MainallContainer #errorDiv {
   position : absolute;;
@@ -41,22 +41,25 @@ top : 10px;
   z-index : 7;
 }
 #MainallContainer #logo_image {
+  position : relative;
   height : 60%;
   width : 70%;
   z-index : 6;
 }
-#errorDiv {
-  positon : relative;
-  width : 25%;
-  top : 5px;
-  text-align: center;
+#MainallContainer #logo_image img{
+  position : relative;
+  height : 0%;
+  width : 70%;
+  z-index : 6;
 }
-#errorDiv img {
+
+
+#MainallContainer #errorDiv img {
   position : relative;
   top : -20vh
   
 }
-#errorDiv #messSpan {
+#MainallContainer #errorDiv #messSpan {
   position : relative;
   top : -20vh;
   font-size :25px;
@@ -68,10 +71,10 @@ top : 10px;
 #MainallContainer #detail_fs_main {
   position : relative;
   border-style: outset;
-  top : -50px;
+  top : -30%;
   width : 95%;
   padding : 5px;
-  height : 65vh;
+  height : 65%;
   border-radius : 25px;
   left: 2%;
 }
@@ -141,7 +144,7 @@ top : 10px;
 
 #DidYouKnow {
     position: relative;
-    top: -150px;
+    top: -250px;
     height: auto;
     width : 97%;
     border: green 1px dashed;
@@ -164,7 +167,7 @@ top : 10px;
     padding:2px;
     padding-bottom : 5px;
     padding-left : 5px;
-    top : -60px;
+    top : -30%;
 }
 
 .findOption {
@@ -197,6 +200,35 @@ top : 10px;
 .findOption:hover{
 	cursor: pointer; 
 }
+/*end main*/
+/*start utilities*/
+#UtilallContainer {
+  position : absolute;
+  width : 93vw;
+  height : 90vh; 
+  padding : 20px;
+  border-style: inset;
+  border-radius : 15px;
+  left : 19px;
+}
+
+#UtilallContainer #logo_image_holder{
+    position: absolute;
+    left :65% ;
+    margin-left: auto;
+    margin-right: auto;
+    width : 50%;
+    height : 55%;
+    top : 2px;
+}
+
+#UtilallContainer #logo_image {
+  height : 60%;
+  width : 70%;
+  z-index : 6;
+}
+/*end utilities*/
+
 #guestBook {
   position : relative;
   font-size : 180%;
@@ -278,13 +310,13 @@ top : 10px;
 }
 #option3btn {
   position : relative;
-  top : 50px;
+  top : 0px;
   max-width: 100%;
   font-size: 80%;
 }
 #option2btn {
   position : relative;
-  top : 10px;
+  top : 0px;
   max-width: 70%;
   font-size: 80%;
   width: auto;
@@ -336,8 +368,8 @@ top : 10px;
   position : relative;
 }
 #DDL2{
-  position : absolute;
-   left : 20%; 
+  /*! position : absolute; */
+   left : 30%; 
 }
 #DDL3dd{
   position : relative;
@@ -369,6 +401,7 @@ top : 10px;
     position : relative;
     width: 500px;
   margin-bottom : 15px;
+  left : 30px;
 }
 .buttonclass {
   position : relative;
@@ -407,7 +440,7 @@ position : relative;
   width : 500px;
   padding : 12px;
   width: 500px;
-  border: 1px black solid;
+  /*! border: 1px black solid; */
   height: auto;
   max-height: 200px;
   overflow: auto;
@@ -872,8 +905,8 @@ position : relative;
   padding : 10px;
   margin : 10px;
   cursor : pointer;
-  top : 50px;
-  left: 125px;
+  top : -20px;
+  left: 30px;
 } 
 #buttContSpan {
   position : relative;
@@ -886,13 +919,13 @@ position : relative;
 }
 #op2btSpan {
  position : relative;
-  max-width: 20%;
+  max-width: 25%;
   height: auto;
   padding : 10px;
   margin :10px;
   cursor : pointer;
- top: 10px;
- left: 110px;
+ top: -20px;
+ left: 10px;
 }
 #ddl3Txt {
   position: relative;
@@ -987,16 +1020,16 @@ position : relative;
 }
 #GBlock {
   position : absolute;
-  width : 80%;
+  width : 95%;
   padding : 15px;
-  top: 100%;
-  left: 10%;
+  top: 105%;
+  left: -0%;
 }
 #Ghead {
   position : relative;
   display : block;
   left : 30%;
-  font-size : xx-large;
+  font-size : x-large;
   text-decoration:  underline;
 }
 #listsList #glList {
