--- a/smallerDevice.css
+++ b/smallerDevice.css
@@ -90,7 +90,7 @@
 }
 #MainallContainer #detail_fs_main {
 	position : relative;
-	top : -90px;
+	top : -45%;
 	height : 350px;
 	overflow : auto;
 	
@@ -123,19 +123,28 @@
 	display : none;
 	
 }
+
+#MainallContainer #errorDiv {
+	position : absolute;
+	width : 75%;
+	left : 10%;
+	z-index : 9;
+	
+	
+}
 /*start index style*/
 
 #SFallContainer {
-	position : relative;
-	width : 95vw;
+	position : absolute;
+	width : 95%;
 	height : 100vh;
 	background-color : beige;
 	margin : 2px;
-	left : 5px;
+	left : -5px;
 }
 #SFallContainer #logo_image_holder {
 	position : relative;
-	left : 100px;
+	left : 70%;
 }
 #SFallContainer #dateTime {
 	top : -20px;
@@ -153,15 +162,15 @@
 	
 }
 .Gselect {
-	padding : 0.25px;
-	font-size : smaller;
+	padding : 2px;
+	font-size : x-large;
 	
 }
 #GBlock {
 	position : relative;
 	left : -35px;
 	width : 100%;
-	top : -15px;
+	top : -35px;
 	
 	
 }
@@ -214,32 +223,41 @@
 	top : 15px;
 	left : -6px;
 }
+#buttContSpan {
+	position : relative;
+	top : 10%;
+	left : 0%;
+	width : 90%;
+	
+}
 #op2btSpan {
-	position : absolute;
-	top : 110px;
-	left : -12%;
-	max-width : 40%;
+	position : relative;
+	
+	
 	height : 30px;
 	font-size : small;
-	float : left;
+	
 }
 #option2btn {
-	position : absolute;
-	width : 90px;
-	top : -0px;
+	position : relative;
+	
+	
+	
 	
 }
 #opt3btSpan {
-	position : absolute;
-	top : 60px;
-	left : -70%;
-	width : 30%;
-	height : 30px;
+	position : relative;
+	width: 20px;
+	
+}
+#option3btn {
+height : 30px;
 	font-size : small
+	
 }
 #SFallContainer #catPicsList {
     position: relative;
-    width: ;
+    width: auto;
     height: auto;
     top: 0%;
     max-height: 350px;
@@ -318,51 +336,66 @@
 
 /*start getDetails*/
 #DETallContainer {
-	position : relative;
-	width : 128vw;
+	position : absolute;
+	width : 85%;
 	height : 160vh;
 	background-color : beige;
 	margin : 2px;
-	left : 5px;
+	left : -5px;
 }
 #DETallContainer #dateTime {
 	position : relative;
-	left :-70%;
+	left :-40%;
 	top : -10px;
+	font-size : large;
+	width : 60%;
 }
 #DETallContainer #logo_image {
 	position : relative;
 	left : -0%;
 	top : -20px;
+		width : 40%;
 }
+
 #DETallContainer #imgGrid {
     position: absolute;
-    max-width: 140px;
+    max-width: 160px;
     max-height: 310px;
     top: 5%;
-    left: 80%;
+    left: 70%;
     overflow: auto;
     margin-right: 2px;
 }
 #DETallContainer #imgGrid img {
 	position : relative;
-	width : 80%;
+	width : 95%;
 	height : 90%;
 	
 }
 #DETallContainer #pgButtons {
 	position : relative;
-	top : -40px;
+	top : -20px;
+	font-size : small;
+}
+#pgButtons input {
+	position : relative;
+	font-size : 20%;
+	height : 20;
+	width : 30%;
+}
+
+#pgButtons a {
+	font-size : small;
 	
 }
 #DETallContainer #detail_fs {
 	position : relative;
-	width : 95%;
-	left : 0px;
+	width : 99%;
+	left : -20px;
 	top : -50px;
 }
 #DETallContainer #catHeading {
-	font-size : xx-large;
+	font-size : x-large;
 	
 }
 #DETallContainer #detail_fs .itemC {
@@ -738,9 +771,9 @@ clear :right;
 	position : relative;
 	left : 70%;
 	width : 90%;
-	height : 70%;
+	height : 35%;
 	
-	top: 1px;
+	top: -8%;
 }
 #picHeading {
 	position : absolute;
@@ -900,6 +933,7 @@ clear :right;
   border-style: inset;
    border-radius: 22px;
   background-color : beige;
+  left: -15px;
 }
 
 
@@ -924,6 +958,12 @@ clear :right;
 	left : -20%;
 	top : -7%
 }
+#LnFallContainer #logo_image_holder img {
+	position : relative;
+	left : 85%;
+	top : 0px;
+	width: 40%;
+}
 #animBut {
 	position : relative;
 	left : -23%;
@@ -937,8 +977,9 @@ clear :right;
 }
 #LnFallContainer #dateTime {
 	position : relative;
-	left : 60%;
+	left : 0%;
 	top : 0%;
+	color: green;
 }
 .selectB {
 	position : relative;
