--- a/Bsource.css
+++ b/Bsource.css
@@ -98,7 +98,7 @@
   position : relative;
   border : none;
   background : none;
-  font-size: large;
+  font-size: x-large;
   text-decoration : underline;
   cursor : pointer;
   margin : 10px;
