--- a/animedit.css
+++ b/animedit.css
@@ -10,7 +10,7 @@
 #pgButtons {
     position : relative;
   
-    width: 500px;
+    width: 800px;
     top: -45px;
 }
 
@@ -30,7 +30,7 @@
   position : relative;
   width : 30%;
   left : 70%;
-  top : 20px;
+  top : 0px;
 }
 .hiddentext {
   display : none;
@@ -93,6 +93,7 @@
   font-size: 32px;
   left : 30%;
   top : -40px;
+  text-decoration : underline;
   
 }
 #imgDisplay {
@@ -188,5 +189,17 @@
   
     
 }
-
+.linkC {
+  position : relative;
+  border : none;
+  background : none;
+  font-size: x-large;
+  text-decoration : underline;
+  cursor : pointer;
+  margin-right : 10px;
+  }
+.linkC:hover {
+  color : blue;
+  
+}
 
