--- a/DataInput.css
+++ b/DataInput.css
@@ -1,10 +1,16 @@
 #allContainer {
     position: relative;
-    width: 93vw;
+    width: 90vw;
     height: 90%;
     padding: 20px;
     border-style: inset;
     border-radius: 22px;
+}
+
+#edDetails {
+    posution : relative;
+    width : 95%;
+    
 }
 /*edit file css*/
 #logo_image {
@@ -12,8 +18,7 @@
   height : 40%;
   width : 30%;
   z-index : -1;
-  top : -0vh;
-   left : -10%;
+ 
 }
 .littleDD {
     border-radius : 15px;    
@@ -68,8 +73,9 @@
  font-size : 38px;
  text-align : center;
  width : 300px;
- left: 70%;
+ left: 35%;
  top: -180px;
+ text-decoration : underline;
 }
 #headinglist {
 	position : relative;
@@ -167,7 +173,7 @@
 }
 #pgButtons {
     position: relative;
-	top : -0px;
+	top : -150px;
 }
 #imgDisplay {
 	position : relative;
@@ -221,8 +227,8 @@ width : 170%;
 #reglogo_image{
     position : relative;
     width : 20%;
-    left : 30%;
-    top:-60px;
+    left : 25%;
+    /*! top:-60px; */
 }        	
 #regheadingText {
     position : relative;
@@ -238,7 +244,7 @@ width : 170%;
 }
 #reglogo_image{
 position : relative;
-width : 20%;
+width : 40%;
 height : 20%;
 }
 #imgDisplay1 {
@@ -426,4 +432,17 @@ position : relative;
 #dataF fieldset {
     border : none;
     
+}
+	.linkC {
+  position : relative;
+  border : none;
+  background : none;
+  font-size: x-large;
+  text-decoration : underline;
+  cursor : pointer;
+   margin-right : 10px;
+  }
+.linkC:hover {
+  color : blue;
+  
 }
