--- a/minedit.css
+++ b/minedit.css
@@ -9,8 +9,8 @@
 }
 #pgButtons {
     position : relative;
-  top : -40px;
-    width: 500px;
+  top : -50px;
+    width: 800px;
 }
 
 .buttonclass {
@@ -30,7 +30,7 @@
   position : relative;
   width : 30%;
   left : 70%;
-  top : 20px;
+  top : 0px;
 }
 .hiddentext {
   display : none;
@@ -53,7 +53,7 @@
 
 #dateTime {
   position: fixed;
-  top: 12px;
+  top: 42px;
   left: 20px;
   z-index:3;
   font-size: 18px;
@@ -93,6 +93,7 @@
   font-size: 32px;
   left : 30%;
   top : -40px;
+  text-decoration: underline;
   
 }
 #imgDisplay {
@@ -186,3 +187,16 @@
 }
 
 
+.linkC {
+  position : relative;
+  border : none;
+  background : none;
+  font-size: x-large;
+  text-decoration : underline;
+  cursor : pointer;
+  margin-right : 10px
+  }
+.linkC:hover {
+  color : blue;
+  
+}
