--- a/Breg.css
+++ b/Breg.css
@@ -5,8 +5,27 @@
   padding : 20px;
   border-style: inset;
    border-radius: 22px;
+ 
+  margin : 10px;
 }
-#REGallContainer #dateTime {
+#agree p {
+  position : relative;
+  width : 95%;
+  height : auto;
+  overflow: auto;
+  padding : 5px;
+  white-space: normal;
+  
+
+}
+#agree span {
+  position : relative;
+  top : 60px;
+  float: left;
+  font-size: x-large;
+  align-items: ;
+}
+#dateTime {
   position: relative;
   top: 15px;
   left: -70%;
@@ -16,6 +35,14 @@
   padding-left:10px;
   color: green;
   width: 30%;
+}
+.heading {
+  position : relative;
+  font-size : xx-large;
+  top : -10px;
+  left : 30%;
+  text-decoration: underline;
+  
 }
 .linkC {
   position : relative;
@@ -29,18 +56,29 @@
   color : blue;
   
 }
-#REGallContainer #logo_image_holder{
+#allContainer #logo{
   position : relative;
-   left : 68%;
-   top : -40px;
+   left : 38%;
+   top : -0px;
  }
 
-#REGallContainer #logo_image {
+#logo_image {
   height : 40%;
   width : 30%;
 }
-#REGallContainer #pgButtons {
+#logo_image_holder{
+  position : relative;
+   left : 38%;
+   top : -0px;
+ }
+
+#allContainer #logo_image {
+  height : 40%;
+  width : 30%;
+}
+ #pgButtons {
 	position : relative;
+  border-radius : 15px;
 }
 .inputClass {
 	position : relative;
@@ -79,7 +117,7 @@
   	width : 120px;
   	height : 120px;
 }
-#REGallContainer .labelClass {
+#allContainer .labelClass {
 	height : 32px;
 	padding : 3px;
 	font-size : 18px;
@@ -96,22 +134,41 @@
 }
 .buttonclass {
   position : relative;
-    border : green solid 1px;
+    /*! border : green solid 1px; */
   height : auto;
   width : auto;
   font-size : 20px;
   padding : 4px;
   margin : 10px;
 }
+#phpOutput {
+  position : relative;
+  
+}
+#messSpan {
+  position : absolute;
+  top : 20px;
+  left : 180px;
+  font-size : 20px;
+  
+}
 .fileClass {
     border : 1px dashed green;
 }
-#REGallContainer #detail_fs{
+.Important {
   position : relative;
+  color : red;
+  font-size : 26px;
+  
+}
+#detail_fs{
+  position : relative;
+  border : 1px black solid;
+  border-radius : 20px;
   height : 70%;
   border-style: outset;
   padding : 20px;
-  width : 90%;
+  width : 96%;
   overflow : auto;
   white-space : nowrap;
 }
