--- a/Bindex.css
+++ b/Bindex.css
@@ -1,19 +1,20 @@
 /*Index Styles*/
 
 #SFallContainer {
- position : relative;
-  width : 90vw;
+  position : relative;
+  width : 89vw;
   height : auto;
   padding : 20px;
-  border-style: inset;
+  border : 1px lightblue inset;
   border-radius : 15px;
   left : 1%;
+  margin-top : 2%;
 }
 	.linkC {
   position : relative;
   border : none;
   background : none;
-  font-size: large;
+  font-size: x-large;
   text-decoration : underline;
   cursor : pointer;
   }
@@ -24,21 +25,16 @@
 #option3btn {
   position : relative;
   top : 0px;
-  max-width: 100%;
-  font-size: 80%;
 }
 #option2btn {
   position : relative;
   top : 0px;
-  max-width: 70%;
-  font-size: 80%;
-  width: auto;
 }
 #SFallContainer #logo_image_holder {
     position: relative;
-    left: 70%;
-    top: -50px;
-  width : 60%;
+    left: 15%;
+    /*! top: -50px; */
+  width : 70%;
 }
 .italC {
   font-style: italic;
@@ -48,16 +44,16 @@
   
 }
 #DDL3Option{
-  position : absolute;
+  position : relative;
   top : 50%;
   left : -0px;
 }
 #SFallContainer #dateTime {
   position: relative;
   top: 15px;
-  left: -70%;
+  /*! left: -70%; */
   z-index:3;
-  font-size: 18px;
+  font-size: x-large;
   margin-left:auto;
   padding-left:10px;
   color: green;
@@ -68,13 +64,13 @@
 }
 #SFallContainer #logo_image{
 	height : 60%;
-  	width : 50%;
+  	width : 80%;
 }
 #SFallContainer .cathead {
-	position : absolute;
-   font-size : 250%;
+	position : relative;
+   font-size : 300%;
    text-decoration : underline;
-   top : 120px;
+   top : -80px;
    left : 35%;
    z-index : 4;
 }
@@ -90,21 +86,21 @@
   position : relative;
 }
 #DDL2{
-  /*! position : absolute; */
-   left : 30%; 
+  position : relative;
+  width: 140px;
 }
 #DDL3dd{
   position : relative;
   width : 130px;
 }
 #DDLOption{
-  position : absolute;
+  position : relative;
   left : 0%;
 }
 #SFallContainer #findOptions {
   position : relative;
-  border : 1px black dashed;
-  width : 70%;
+  /*! border : 1px black dashed; */
+  width : 60%;
   padding : 10px;
   height: 30vh;
 }
@@ -122,8 +118,9 @@
 #SFallContainer #pgButtons {
     position : relative;
     width: 500px;
-  margin-bottom : 15px;
-  left : 30px;
+  margin-bottom : 5px;
+  left : 40px;
+  
 }
 .buttonclass {
   position : relative;
@@ -137,17 +134,17 @@
   left : 0%;
 }
 #SFallContainer #theCategory {
-  position : relative;
+  position : absolute;
   padding : 5px;
   width : 20%;
-   border-style : dashed;
-  border-width : 2px;
-  max-height: 230px;
+   /*! border-style : dashed; */
+  /*! border-width : 2px; */
+   max-height: 90%; 
   margin-right: 10px;
-  float : right;
+  /*! float : right; */
    overflow-y : scroll;
-  top: 4px;
-  left: -2%;
+  top: 10px;
+  left: 75%;
 }
 #SFallContainer #detail_fs{
 position : relative;
@@ -195,10 +192,10 @@ position : relative;
   width : 85vw;
   height : auto;
   max-height: 100vh;
-  padding : 20px;
-  border-style: inset;
-  border-radius: 22px; 
+  /*! padding : 20px; */
+  border: 1px lightblue solid; 
   left: 1%;
+  border-radius: 15px;
 }
 #SFallContainer #catPicsList {
   position : relative;
@@ -209,8 +206,9 @@ position : relative;
 }
 #catPicsList img {
   cursor : pointer;
-  width : 180%;
+   width : 180%; 
   height : 100%;
+  margin-bottom : 3px;
 }
 
 #opt3btSpan {
@@ -224,7 +222,7 @@ position : relative;
   left: 30px;
 } 
 #buttContSpan {
-  position : absolute;
+  position : relative;
   display : block;
   width : 250px;
   font-size : 140%;
@@ -247,7 +245,7 @@ position : relative;
   height: 20%;
   max-width: 150px;
   /*! top: -12px; */
-  left: 20px;
+ 
 }
 #infoDiv p{
   position : relative;
@@ -263,11 +261,17 @@ position : relative;
 }
 
 #GBlock {
-  position : absolute;
+  position : relative;
   width : 95%;
   padding : 15px;
   top: 105%;
   left: -0%;
+}
+#alphList {
+	position : relative;
+  left : -2%;
+  width : 90vw;
+
 }
 #Ghead {
   position : relative;
@@ -294,17 +298,17 @@ position : relative;
   display : none;
 }
 #retBlock {
-  position : absolute;
+  position : relative;
   border : 1px black solid;
   width : 28%;
   display : block;
-  top : -35%;
+  top : -60px;
   z-index : 6;
-  max-height : 20vh;
+  max-height : 10vh;
   background-color: rgba(52,34,14,80);
   color : aliceblue;
   overflow : auto;
-  left: 80%;
+  /*! left: 8%; */
 }
 
 #GBlock p {
@@ -328,45 +332,45 @@ position : relative;
   positon : relative;
 }
 #defBlock {
-  position : absolute;
+  position : relative;
   border : 1px black solid;
-  display : block;
   max-width : 40%;
   max-height : 80%;
-  top : -80%;
-  left : 30%;
+  top : -150px;
+  left : 320px;
+  
   background-color: rgba(152,34,14,80);
   color : aliceblue;
   font-size : x-large;
   z-index: 6;
   padding: 5px;
   overflow: auto;
-  left : 37%;
+  /*! left : 36%; */
 }
 .Gbutton {
   position : relative;
   font-size : xx-large;
-  left : 95%;
+  left : 78%;
   padding-bottom : 1px;
   color : blue;
   cursor : pointer;
   width : 150px;
-  top: -190px;
+  top: -1px;
 }
 .Gselect {
   position : relative;
-  float : left;
   cursor : pointer;
   color : blue;
   margin : 3px;
-  font-size : x-large;
+  font-size : xx-large;
   padding-left: 1.5%;
+  float : left;
 }
 #hitCnt {
-  position : absolute;
-  top : -60px;
+  position : relative;
+  top : -45px;
   left : 75%;
   z-index: 1;
-  font-size : x-large;
+  font-size : xx-large;
   
 }
