--- a/Bdetails.css
+++ b/Bdetails.css
@@ -5,7 +5,7 @@
   width : 95%;
   height : 89%;
   padding : 20px;
-  border-style: inset;
+  border : 1px lightblue solid;
   border-radius: 20px;
   top: 1%;
 }
@@ -23,22 +23,20 @@
 }
 #pgHeading {
   position : relative;
-  top : -25px;
+  top : -65px;
   left : 35%;
-  font-size : xx-large;
+  font-size : 300%;
   text-decoration : underline;
-  width: 100px;
+  width: auto;
 }
 #DETallContainer #dateTime {
   position: relative;
-  top: 15px;
-  left: -70%;
-  z-index:3;
-  font-size: 18px;
+  font-size: x-large;
   margin-left:auto;
   padding-left:10px;
   color: green;
   width: 30%;
+  left : -40%;
 }
 #DETallContainer .buttonclass {
   position: relative;
@@ -61,12 +59,13 @@
 }
 #DETallContainer #logo_image_holder{
   position : relative;
-   left : 68%;
-  top : -40px;
+   left : -3%;
+  top : 0px;
+   width : 30%;
  }
 #DETallContainer #logo_image {
-  height : 40%;
-  width : 30%;
+  height : 100%;
+  width : 100%;
 }
 #DETallContainer #fqnNameList{
   position : relative;
@@ -113,7 +112,7 @@
 }
 #DETallContainer #catHeading {
   position : relative;
-  left : 10%;
+  left : 0%;
   font-size : 330%;
   width: auto;
 }
@@ -170,8 +169,8 @@
 }
 #DETallContainer #pgButtons {
 position : relative;
-  	top : -60px;
-	left: 1%;
+  	top : -40px;
+	left: 3%;
 }
 #viewsBlock {
     position: relative;
@@ -187,11 +186,12 @@ position : relative;
     position: relative;
     border: black 1px solid;
     border-radius: 20px;
-    width: 16vw;
+    width: 30vw;
   	min-width:300px;
-    height: 100px;
- 	top : -225px;
-  	left :20%;
+    height: 240px;
+  background-color: yellow;
+ 	top : -290px;
+  	left :18%;
   	display :none;
   	overflow: auto;
   	padding: 30px;
@@ -209,8 +209,8 @@ position : relative;
     width: 16vw;
   	min-width:250px;
     height: auto;
-  	top : -230px;
-  	left :20%;
+  	top : -290px;
+  	left :18%;
   	font-size : 190%;
   	text-decoration: underline;
  	 background-color: yellow;
@@ -219,8 +219,11 @@ position : relative;
   cursor: pointer;
   background-color: blue;
 }
-.button{
-  padding-left:20px;
+.button  {
+  position : relative;
+  /*! top : -3px; */
+  margin-right : 10px;
+  
 }
 #commentBlock {
   	position : relative;
