--- a/Sindex.css
+++ b/Sindex.css
@@ -8,15 +8,16 @@
 
 #SFallContainer #logo_image_holder {
 	position : relative;
-	left : 40vw;
-	width : 75%;
+	left : 30%;
+	width : 80%;
 	height : 16%;
-	top : -65px;
+	top : -50px;
 }
 #SFallContainer #dateTime {
 	top : -10px;
 	width : 60%;
 	left : -40%;
+	font-size : medium;
 
 }
 
@@ -108,6 +109,7 @@ left: 8%;
   left : 75%;
   z-index: 1;
   font-size : x-large;
+	width : 65px;
   
 }
 #SFallContainer #pgButtons {
@@ -141,11 +143,15 @@ left: 8%;
 	
 }
 #DDL2 {
-	position : relative;
-	
+	position: relative;
+	width : auto;
+	max-width: 120px;
+	font-size : small;
+	padding : 2px;
 }
 #DDL3dd {
 	position : relative;
+	width : auto;
 }
 #ddl3Txt {
 	position : relative;
@@ -198,7 +204,7 @@ left: 8%;
 }
 #DDL1Min {
 	position : relative;
-	width : 40px;
+	max-width : 300px;
 	
 }
 #SFallContainer #theCategory {
