--- a/animedit.css
+++ b/animedit.css
@@ -3,7 +3,7 @@
   width : 95%;
   height : 90%;
   padding : 20px;
-  border-style: inset;
+  border : 1px lightblue solid;
   border-radius: 22px;
  
 }
@@ -11,7 +11,7 @@
     position : relative;
   
     width: 800px;
-    top: -45px;
+    top: -85px;
 }
 
 .buttonclass {
@@ -28,9 +28,9 @@
 }
 #logo_image {
   position : relative;
-  width : 30%;
-  left : 70%;
-  top : 0px;
+  width : 40%;
+  left : 60%;
+  top : -90px;
 }
 .hiddentext {
   display : none;
@@ -39,9 +39,9 @@
 
 #detail_fs_min {
   position : relative;
-  border-style: outset;
-  top : -45px;
-  width : 95%;
+  border : 1px lightblue inset;
+  top : -85px;
+  width : 99%;
   padding : 15px;
   height : auto;
   padding-left : 15px;
@@ -52,11 +52,8 @@
 }
 
 #dateTime {
-  position: fixed;
-  top: 22px;
-  left: 20px;
-  z-index:3;
-  font-size: 18px;
+  position: relative;
+  font-size: x-large;
   margin-left:auto;
   padding-left:0px;
   color: green;
@@ -70,8 +67,8 @@
 .inputClass {
   position : relative;
   float : left;
-  margin-right : 32px;
-  width : 20%;
+  margin-right : 23px;
+  width : 30%;
 }
 
 #dataForm {
@@ -85,14 +82,14 @@
   position : relative;
   width : auto;
   float : left;
-  font-size : 120%;
+  font-size : x-large;
   text-decoration: underline;
 }
 #headingText {
   position : relative;
-  font-size: 32px;
+  font-size: 300%;
   left : 30%;
-  top : -40px;
+  top : -80px;
   text-decoration : underline;
   
 }
@@ -102,11 +99,10 @@
   background-color : rgba(205,135, 12, 0.7);
   padding-left: 2px;
   padding-top: 3px;
-  width : 120px;
+  width : 350px;
   max-height : 170px;
   overflow: auto;
-  left : 90%;
-  top : -70px;      		
+  top : 5px;      		
 }
 .imgClass{
   	position : relative;
@@ -138,6 +134,8 @@
 	position : relative;
 	width : 100px;
 	height : 100px;
+  margin-right : 3px;
+  margin-bottom : 3px;
 }
 .imgHolder {
   position : relative;
@@ -174,8 +172,8 @@
 }
 #oldTags {
   position : relative;
-  left : 240px; 
-  top : -110px;
+  left : 170px; 
+  top : -120px;
   
   max-width: 300px;
 }
