--- a/minedit.css
+++ b/minedit.css
@@ -3,7 +3,7 @@
   width : 95%;
   height : 90%;
   padding : 20px;
-  border-style: inset;
+  border : 1px lightblue solid;
   border-radius: 22px;
  
 }
@@ -30,7 +30,7 @@
   position : relative;
   width : 30%;
   left : 70%;
-  top : 0px;
+  top : -70px;
 }
 .hiddentext {
   display : none;
@@ -39,7 +39,7 @@
 
 #detail_fs_min {
   position : relative;
-  border-style: outset;
+  border : 1px lightblue solid;
   top : -45px;
   width : 95%;
   padding : 15px;
@@ -52,8 +52,7 @@
 }
 
 #dateTime {
-  position: fixed;
-  top: 42px;
+  position: relative;
   left: 20px;
   z-index:3;
   font-size: 18px;
@@ -90,7 +89,7 @@
 }
 #headingText {
   position : relative;
-  font-size: 32px;
+  font-size: 300%;
   left : 30%;
   top : -40px;
   text-decoration: underline;
@@ -102,11 +101,11 @@
   background-color : rgba(205,135, 12, 0.7);
   padding-left: 2px;
   padding-top: 3px;
-  width : 120px;
-  max-height : 170px;
+  width : 320px;
+  max-height : 110px;
   overflow: auto;
-  left : -130px;
-  top : -70px;      		
+  left : -1px;
+  top : 10px;      		
 }
 .imgClass{
   	position : relative;
@@ -158,21 +157,22 @@
 #oldImages {
   position : relative;
   top : 8px;
-  padding-left : 12px;
+  padding-left : 2px;
+  width : 142px;
 }
 
 #newImages {
   position :absolute;
   top : 5px;
   left : 55% ;
-  width : 200px;;
+  width : 500px;;
   
   
 }
 #oldTags {
   position : relative;
-  left : 140px; 
-  top : -110px;
+  left : 150px; 
+  top : -140px;
   
 }
 #optionsDsplay{
