--- a/smallerDevice.css
+++ b/smallerDevice.css
@@ -348,63 +348,65 @@ height : 30px;
 
 /*start getDetails*/
 #DETallContainer {
-	position : absolute;
-	width : 85%;
-	height : 160vh;
-	background-color : beige;
+	position : relative;
+	width : 98%;
+	height : auto;
 	margin : 2px;
 	left : -5px;
 }
 #DETallContainer #dateTime {
 	position : relative;
-	left :-40%;
-	top : -10px;
-	font-size : large;
+	left :-10%;
+	top : -25px;
+	font-size : medium;
 	width : 60%;
 }
 #DETallContainer #logo_image {
 	position : relative;
-	left : -0%;
-	top : -20px;
-		width : 40%;
+	left : 20%;
+	top : -10px;
+		width : 80%;
 }
-
+#pgHeading {
+	position: relative;
+	top: -65px;
+	left: 30%;
+	font-size: xx-large;
+	text-decoration: underline;
+	width: auto;
+}
 #DETallContainer #imgGrid {
     position: absolute;
     max-width: 160px;
-    max-height: 310px;
-    top: 5%;
-    left: 70%;
+    max-height: 110px;
+    top: 9%;
+    left: 55%;
     overflow: auto;
     margin-right: 2px;
 }
 #DETallContainer #imgGrid img {
 	position : relative;
-	width : 95%;
+	width : 75%;
 	height : 90%;
 	
 }
 #DETallContainer #pgButtons {
 	position : relative;
-	top : -20px;
-	font-size : small;
+	top : -60px;
 }
 #pgButtons input {
 	position : relative;
-	font-size : 20%;
-	height : 20;
-	width : 30%;
 }
 
 #pgButtons a {
-	font-size : small;
 	
 }
 #DETallContainer #detail_fs {
 	position : relative;
-	width : 99%;
+	width : 90vw;
 	left : -20px;
-	top : -50px;
+	top : -95px;
+	height : 78%;
 }
 #DETallContainer #catHeading {
 	font-size : x-large;
@@ -415,27 +417,51 @@ height : 30px;
 	border : none;
 	margin : 0px;
 	padding : 1px;
-	width : 80%
+	width : 100%;
+	height : 60px;
 	
+}
+#ratehead {
+	padding: 8px;
+	font-size: large;
+	text-decoration: underline;
+}
+p {
+	position : relative;
+	margin-top: 0;
+	margin-bottom: 0px;
+	color : blue;
+	top : -0px;
+	font-size : large;
+}
+#DETallContainer #fqnNameList {
+	position: relative;
+	width: 95%;
+	/* height: auto; */
+	height: 200px;
+	min-height: 200px;
+	padding: 10px;
+	border : 1px lightblue solid;
+	border-radius: 12px;
+	overflow: auto;
+	margin-top: 5px;
 }
  #DETallContainer #otherDetails {
     position: relative;
-    width: 45%;
+    width: 43%;
     border-radius: 5px;
     padding: 2px;
-    margin-top: 10px;
+    margin-top: 5px;
     overflow: auto;
-    max-height: 140px;
+    height: 120px;
 	top : 0px;
 }
 #otherDetails .oDC .labelClass  {
 	position : relative;
 	text-decoration: none;
-		font-size :  large;
+	font-size :  large;
 	padding : 1px;
-	width : 10%;
-float : left;
-	clear : both;
+	width : 20%;
 	width : 80%
 }
 #oDDOutput {
@@ -444,32 +470,33 @@ float : left;
     border-radius: 12px;
     padding: 10px;
     max-height: 120px;
-    max-width: 45%;
+    max-width: 50%;
     overflow: auto;
-    left: 50%;
-    padding-top: 5px;
-	top : -140px;
+    left: 45%;
+    padding-top: 3px;
+	top : -100px;
 }
 #viewsBlock {
     position: relative;
-    border: black 1px solid;
+    border: lightblue 1px solid;
     border-radius: 20px;
     padding: 5px;
-    width: 95%;
+    width: 44vw;
     font-size: large;
-    top: -60px;
-    left: 8px;
+    top: -90px;
+    left: -15px;
 	margin-right : 5px;
+	margin-bottom : 0px;
 }
 #ratebut {
     position: relative;
     border: black 1px solid;
     border-radius: 20px;
-    width: 97%;
-    min-width: 250px;
-    height: auto;
-    top: -58px;
-    left: 2%;
+    height: 40px;
+	  min-width : 15%;
+	  width : 180px;
+    top: -290px;
+    left: 47%;
     font-size: large;
     text-decoration: underline;
     background-color: yellow;
@@ -479,15 +506,16 @@ float : left;
     border: black 1px solid;
 	background-color: yellow;
     border-radius: 20px;
-    width: 80%;
-    min-width: 300px;
-    height: 60px;
-    top: -40px;
-    left: 0%;
+	  min-width : 25px;
+    width: 190px;
+    height: 200px;
+    top: -290px;
+    left: 50%;
     display: none;
     overflow: auto;
-    padding: 30px;
-    padding-right: 0px;
+    padding-left: 5px;
+	  padding-bottom : 20px;
+	  padding-top : 2px;
 }
 /*start guestbook*/
 
@@ -583,72 +611,76 @@ float : left;
 
 #REGallContainer {
 	position : relative;
-	width : 100vw;
-	height : 100vh;
-	background-color : beige;
+	width : 95vw;
+	height : 80%;
+	
 	margin : 2px;
+	margin-top : 10px;
 	left : 5px;
 	
 }
 #REGallContainer #dateTime {
 	position : relative;
-	top : -20px;
+	top : -0px;
 	width : 50%;
-	left : 8%;
+	left : -50%;
+	font-size : large;
+	
 }
 #REGallContainer #logo_image_holder {
 	position : relative;
-	left : 20%;
-	width : 120%;
+	left : 48%;
+	width : 80%;
+	height : 40%;
+	top : -60px;
 }
-#pgButtons {
+#REGallContainer #pgButtons {
 	position : relative;
-	top : 10px;
+	top : -40px;
+	left : 30px;
 }
 
-#pgButtons input {
-	border-radius : 10px;
-	margin : 1px;
-	font-size : large;
-}
-#pgButtons a {
-	border-radius : 10px;
-	font-size : large;
-}
 #REGallContainer #detail_fs {
     position: relative;
-    height: 70%;
-    border-style: outset;
-    padding: 2px;
-    width: 90%;
-	 top : 0px;
+    max-height: 90%;
+	height : auto;
+    border : 1px lightblue solid;
+    padding:15px;
+    width: 80vw;
+	max-width: 100%;
+	 top : -50px;
+	overflow: auto;
 }
 #REGallContainer #detail_fs label {
-	font-size : small;
+	font-size : small ;
+	
+}
+#REGallContainer .labelClass {
+	position : relative;
 	
 }
 #REGallContainer .inputClass {
     position: relative;
-clear :right;
-	width: 40%;
-    font-size: large;
-    left: -%;
-    margin: 2px;
-    top: -25px;
+	width: 50%;
+    font-size: small;
+    margin-left: 5px;
     padding: 1px;
+	overflow: auto;
+	white-space: wrap;
 	
 }
 #personalDetails {
 	position : relative;
     width: 70%;
      padding: 5px;
+	margin : 10px;
 }
 #REGallContainer #detail_fs #regPic {
 	position : relative;
-	float : left;
 	top : -0px;
 	font-size : small;
-	width : 50%;
+	width : 100%;
+	z-index : 8;
 }
 #securityInfo label {
 	display : none;
@@ -656,22 +688,22 @@ clear :right;
 }
 #securityInfo #secA {
 	position : relative;
-	left : -%;
-	width : 90%;
-	top : 10px;
+	margin-top : 5px;
+	width : 97%;
+	top : 5px;
+	font-size : 12px;
 }
 #securityInfo #secQ {
 	position : relative;
-	left : -45%;
-	width : 100%;
-	font-size : smaller;
-	height : 20px;
+	left : 0%;
+	width : 97%;
+	font-size : 12px;
 	padding : 0px;
 	top : 10px
 }
 #imgDisplay {
     position: absolute;
-    top: 1px;
+    top: 25px;
     left: 74%;
     width: 23%;
     border: orange 1px dashed;
