--- a/vegedit.css
+++ b/vegedit.css
@@ -3,13 +3,13 @@
   width : 95%;
   height : 90%;
   padding : 20px;
-  border-style: inset;
+  border : 1px lightblue solid;
   border-radius: 22px;
+  margin-top : 10px;
  
 }
 #pgButtons {
     position : relative;
-  
     width: 500px;
     top: -50px;
 }
@@ -29,9 +29,9 @@
 
 #logo_image {
   position : relative;
-  width : 30%;
-  left : 70%;
-  top : 0px;
+  width : 40%;
+  left : 60%;
+  top : -70px;
 }
 .hiddentext {
   display : none;
@@ -40,7 +40,7 @@
 
 #detail_fs_min {
   position : relative;
-  border-style: outset;
+  border : 1px lightblue solid;
   top : -45px;
   width : 95%;
   padding : 15px;
@@ -53,15 +53,14 @@
 }
 
 #dateTime {
-  position: fixed;
-  top: 22px;
-  left: 20px;
+  position: relative;
   z-index:3;
   font-size: 18px;
   margin-left:auto;
   padding-left:0px;
   color: green;
 }
+
 .nothiddentext {
   position : relative;
   width : 100%;
@@ -116,23 +115,22 @@
   background-color : rgba(205,135, 12, 0.7);
   padding: 2px;
   padding-top: 3px;
-  width : 150px;
+  width : 400px;
   max-height : 170px;
   overflow: auto;
-  left : -170px;
-  top : -70px;      		
+  left : 0px;
+  top : 5px;      		
 }
 .imgClass{
-  	position : relative;
+  position : relative;
 	width : 80%;
 	height : 50%;
-  
-  	border-radius:  15px;
+  border-radius:  15px;
 }
 #newtagslist{
    position : relative;
    top : -228px;
-  width : auto;
+   width : auto;
    left : 120%;
    padding : 5px;
   
@@ -174,14 +172,14 @@
 }
 #oldImages {
   position : relative;
-  top : 8px;
+  top : -18px;
   padding-left : 12px;
   width:  200px;
 }
 
 #newImages {
-  position :absolute;
-  top : 5px;
+  position :relative;
+  top : -155px;
   left : 55% ;
   width : 200px;;
   
